--- a/FlyFiguresTraineeProject/Resources/Styles/ButtonStyles.xaml
+++ b/FlyFiguresTraineeProject/Resources/Styles/ButtonStyles.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="FigureButton" TargetType="Button">
+    <Style x:Key="HeaderButton" TargetType="Button">
         <Setter Property="Width" Value="50" />
         <Setter Property="Height" Value="50" />
         <Setter Property="Background" Value="#fff" />
